<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pattern_or_pin"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/set_pattern_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pattern"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/set_pin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pin"
        app:layout_constraintTop_toBottomOf="@id/set_pattern_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>
</LinearLayout>
