<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TextView for displaying the question -->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_question"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- EditText for entering the answer -->
    <EditText
        android:id="@+id/answer_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/your_answer"
        android:inputType="text"
        android:autofillHints="answer"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <!-- Button for verifying the answer -->
    <Button
        android:id="@+id/verify_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/answer_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:minHeight="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
